Signup Modal added with password toggler in login

--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,8 @@
 }
 .navbar
 {
-	background: -webkit-linear-gradient(left, #006CAF ,#1ADAFC,#006CAF); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(left,#006CAF ,#1ADAFC,#006CAF);/* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(left, #006CAF ,#1ADAFC,#006CAF); /* For Fx 3.6 to 15 */
-    background: linear-gradient(to right, #006CAF ,#1ADAFC,#006CAF); /* Standard syntax (must be last) */
+	background-color: #0aa9ff;
+    opacity: 0.7;
 }
 body
 {
@@ -24,4 +22,9 @@ body
 {
 	-webkit-filter: grayscale(0%);filter: grayscale(0%);
 }
-
+a{
+    cursor: pointer;
+}
+button{
+    cursor: pointer;
+}
