--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,32 @@
 	background-color: #0aa9ff;
     opacity: 0.7;
 }
+.card{
+  box-shadow: 5px 5px 25px grey;
+}
 body
 {
     background: url("../images/gears3.svg") no-repeat center fixed; 
     background-size: cover;
+}
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 50px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  font-family: 'Permanent Marker';
+  font-size: 40px;
+  background-color: black;
+  opacity: 0.8;
+  color: white;
+  padding:5px;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 .bandw
 {
