--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,11 @@
 	background-color: #0aa9ff;
     opacity: 0.7;
 }
+.navbar-dark .navbar-nav .nav-link {
+    color: #ffffff;
+}
 .card{
   box-shadow: 5px 5px 25px grey;
-}
-body
-{
-    background: url("../images/gears3.svg") no-repeat center fixed; 
-    background-size: cover;
 }
 #myBtn {
   display: none;
@@ -35,14 +33,6 @@ body
   width: 50px;
   height: 50px;
   border-radius: 50%;
-}
-.bandw
-{
-	-webkit-filter: grayscale(100%);filter: grayscale(100%);
-}
-.bandw:hover
-{
-	-webkit-filter: grayscale(0%);filter: grayscale(0%);
 }
 a{
     cursor: pointer;
